[css-grid] Content box incorrectly used as non-auto min-height https://bugs.webkit.org/show_bug.cgi?id=155946

Reviewed by Antti Koivisto.

Source/WebCore:

When computing the minimum height value of grid items with
non-auto min-height we used to return the size of the content
box meaning that borders and paddings were incorrectly
ignored.

Note that we're also ignoring margins, but as that is a
problem also for widths it'll be fixed in a follow up patch.

Test: fast/css-grid-layout/min-height-border-box.html

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::minSizeForChild):

LayoutTests:

* fast/css-grid-layout/min-height-border-box-expected.txt: Added.
* fast/css-grid-layout/min-height-border-box.html: Added.


Canonical link: https://commits.webkit.org/174422@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199153 268f45cc-cd09-0410-ab3c-d52691b4dbfc